# HPRO

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: publish.yaml
design/: aodiag.md  io.md  kernel.md  matao.md  overall.md  pw.md  pwproj.md  utils.md  v2h.md
examples/MoS2_demo/: README.md
examples/MoS2_demo/aobasis_ref/: BASIS_ENTHALPY  INPUT_TMP.76167  Mo.ion  Mo.ion.nc  Mo.ion.xml  PARALLEL_DIST  S.ion  S.ion.nc  TIMES  siesta.BONDS  siesta.HSX  siesta.ORB_INDX  siesta.STRUCT_OUT  siesta.XV  siesta.alloc  siesta.times
examples/MoS2_demo/bands_ref/: pw.out
examples/MoS2_demo/pseudos/: S.psml
examples/MoS2_demo/reconstruction/: calc.py
examples/MoS2_demo/scf_ref/: MoS2.xml  VSC  pw.out  pw2bgw.in
examples/MoS2_qe_demo/: README.md
examples/MoS2_qe_demo/aobasis/: Mo.psml
examples/MoS2_qe_demo/aobasis_ref/: 0_NORMAL_EXIT  BASIS_HARRIS_ENTHALPY  CLOCK  FORCE_STRESS  NON_TRIMMED_KP_LIST  OUTVARS.yml  S.ion.xml  S.psml  siesta.DM  siesta.EIG  siesta.FA  siesta.KP  siesta.bib  siesta.fdf  siesta.out
examples/MoS2_qe_demo/bands_ref/: pw.in
examples/MoS2_qe_demo/pseudos/: Mo.psml
examples/MoS2_qe_demo/reconstruction/: calc.py
examples/MoS2_qe_demo/scf_ref/: pw.in
src/: setup.py
src/HPRO/: __init__.py  aodiag.py  bgwio.py  config.py  constants.py  deephio.py  gridintg.py  hrdata.py  kernel.py  lcaodata.py  lcaodiag.py  mathutils.py  matlcao.py  orbutils.py  pwproj.py  structure.py  twocenter.py  utils.py
src/HPRO/from_gpaw/: LICENSE  gaunt.py  spherical_harmonics.py
src/HPRO/io/: aodata.py  bgwio.py  deephio.py  gpawio.py  hrloader.py  siestaio.py  (+2 more)
(+27 files in other folders)
